--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,2 @@
-допилить пагинацию (проблема в двойном GET-запросе);
-вставить пагинацию в страницы index, favors, my_subs, profile;
-вынести функционал рассчитаный на api.js в отдельное приложение;
-допилить скрипт для формирования файла на выгрузку;
-пройтись по чек-листу;
-причесать код;
+All done!
+Vrode...
